plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.y2829'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.6'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:2.6.6'
	implementation 'org.springframework.boot:spring-boot-starter-security:2.6.6'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.6.6'
  
  implementation 'junit:junit:4.13.1'

  compileOnly 'org.projectlombok:lombok'
    
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

//	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'jakarta.validation:jakarta.validation-api:2.0.2'

//	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'


	implementation 'mysql:mysql-connector-java:8.0.28'

	implementation 'com.querydsl:querydsl-jpa:5.0.0'
	implementation 'com.querydsl:querydsl-apt:5.0.0'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	//rdis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//embedded-redis
	implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'

	//웹 소켓
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.webjars:sockjs-client:1.5.1'
	implementation 'org.webjars:stomp-websocket:2.3.4'

	//테스트에서 lombok 사용
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}
